update swagger spec and dataset alias
